--- a/holamundo.html
+++ b/holamundo.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>hola flor, te amo</title>
+  <title>holamundo</title>
 </head>
 <body>
-  <h1>hola mundo!</h1>
+  <h1>hola flor, te amo!</h1>
 </body>
 </html>
